se cambian fotos

--- a/index.html
+++ b/index.html
@@ -39,42 +39,42 @@
     <main>
         <div class="main"> <!--seccion-->
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
             <div class="fotos">
-                <img src="https://placedog.net/500" alt="">
+                <img src="https://placedog.net/500/g" alt="">
                 <p>Tipo:</p>
                 <a href="#" class="cuadro">Dog</a>
             </div>
